[package]
name = "demo_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.*"
clap = "4.0.*"
regex = "1.6.*"


[source]

[source.local]
directory = "/Users/peter/.cargo/registry/cache/github.com-1ecc6299db9ec823"